[package]
name = "authentication_server"
version = "0.1.0"
edition = "2021"
author = "Muktar Sadiq"

[dependencies]
jsonwebtoken = "=9.3.0"

tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
warp = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
